# vibe-agent

./: .env.example  .gitignore  Cargo.toml  PROBLEM.md  README.md  package-lock.json
app/: index.html  package-lock.json  package.json  test-e2e.mjs  test-full.mjs  test-scenario.mjs  test-vercel.mjs  vercel.json
app/api/: llm.mjs
app/src/: App.tsx  main.tsx  types.ts  wasm.ts
app/src/components/: ApiKeyInput.tsx  ChatView.tsx  ErrorBoundary.tsx  SessionTabs.tsx  ToolCallCard.tsx  TracePanel.tsx
app/src/hooks/: useAgent.ts
runtime/: Cargo.toml
runtime/src/: context.rs  error.rs  lib.rs  llm.rs  memory.rs  parser.rs  runtime.rs  session.rs  trace.rs
runtime/src/tools/: calculator.rs  mod.rs  search.rs  todo.rs  weather.rs
