[package]
name = "vibe-agent-runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Request",
  "RequestInit",
  "Response",
  "Headers",
] }
getrandom = { version = "0.2", features = ["js"] }
async-trait = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
